--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.profiles.active=${ACTIVE_PROFILE:dev}
 
 app.methods=GET,POST,OPTIONS,DELETE,PATCH,PUT
 app.headers=Authorization,Content-Type
+
+server.http2.enabled=true
