Backend auth with firebase

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.profiles.active=${ACTIVE_PROFILE:dev}
 
 app.methods=GET,POST,OPTIONS,DELETE,PATCH,PUT
-app.headers=Authorization,Content-Type
+app.headers=Authorization,Content-Type,X-Firebase-Auth
 
 server.http2.enabled=true
