--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -16,6 +16,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	compile group: 'com.google.firebase', name: 'firebase-admin', version: '6.10.0'
 }
 
 bootJar {
